--- a/config/database.yml
+++ b/config/database.yml
@@ -1,18 +1,23 @@
-default: &default
+development: &default
   adapter: postgresql
   encoding: unicode
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-
-development:
-  <<: *default
-  database: rails-graphql-react_development
+  database: rails_graphql_react_dev
+  username: rails_graphql_react_dev
+  password: rails_graphql_react_dev
+  host: localhost
+  pool: 10
 
 test:
   <<: *default
-  database: rails-graphql-react_test
+  database: rails_graphql_react_test
+  username: rails_graphql_react_test
+  password: rails_graphql_react_test
 
 production:
   <<: *default
-  database: rails-graphql-react_production
-  username: rails-graphql-react
-  password: <%= ENV['RAILS-GRAPHQL-REACT_DATABASE_PASSWORD'] %>
+  database: <%= ENV['HEROKU_DB_NAME'] %>
+  username: <%= ENV['HEROKU_DB_USERNAME'] %>
+  password: <%= ENV['HEROKU_DB_PASSWORD'] %>
+  host: <%= ENV['HEROKU_DB_HOSTNAME'] %>
+  port: <%= ENV['HEROKU_DB_PORT'] %>
+  pool: <%= ENV['HEROKU_DB_POOL'] || 5 %>
