--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "semantic-ui-react": "^0.80.0"
   },
   "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-plugin-react": "^7.7.0",
     "webpack-dev-server": "2.11.2"
   }
 }
